# smart_device_test_gpio

./: README.md  partitions.csv  sdkconfig  sdkconfig.old
libraries/coreMQTT/coreMQTT/source/: core_mqtt.c
main/: AccessPointMode.c  AccessPointMode.h  CMakeLists.txt  GPIO.c  GPIO.h  Kconfig.projbuild  StationMode.c  StationMode.h  TcpServer.c  TcpServer.h  UdpServer.c  UdpServer.h  account_handler.c  account_handler.h  app_main.c  aws_iot_handler.c  aws_iot_handler.h  checksum_handler.c  checksum_handler.h  constants.h  context.h  mqtt_demo_mutual_auth.c  partitions.h  reset_handler.c  reset_handler.h  udp_response_handler.c  udp_response_handler.h  wifi_info_handler.c  wifi_info_handler.h
main/memory_handler/: flash_reset_handler.c  flash_reset_handler.h  flash_wifi_info_handler.c  flash_wifi_info_handler.h
main/ota_lib/: flash_boot_handler.c  flash_boot_handler.h  ota_handler.c  ota_handler.h  tcp_ota_handler.c  tcp_ota_handler.h
